<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toStartOf="parent"
    app:layout_constraintStart_toEndOf="parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/app_banner"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_banner_crop"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/app_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/app_logo_white"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/menu_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_banner">

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/statistics"
                android:layout_width="340dp"
                android:layout_height="85dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bn_statistics"
                android:gravity="center_vertical"
                android:onClick="onPressLanguagesButton"
                android:paddingStart="20dp"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="@string/countries"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/summoner_spells"
                android:layout_width="340dp"
                android:layout_height="85dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bn_summoner_spells"
                android:gravity="center_vertical"
                android:onClick="onPressSummonerSpellsButton"
                android:paddingStart="20dp"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="@string/summoner_spells"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/champions"
                android:layout_width="340dp"
                android:layout_height="85dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bn_champions"
                android:gravity="center_vertical"
                android:onClick="onPressChampionsButton"
                android:paddingStart="20dp"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="@string/champions"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/runes"
                android:layout_width="340dp"
                android:layout_height="85dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bn_runes"
                android:gravity="center_vertical"
                android:onClick="onPressRunesButton"
                android:paddingStart="20dp"
                android:text="@string/runes"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/items"
                android:layout_width="340dp"
                android:layout_height="85dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bn_items"
                android:gravity="center_vertical"
                android:onClick="onPressItemsButton"
                android:paddingStart="20dp"
                android:text="@string/items"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/maps"
                android:layout_width="340dp"
                android:layout_height="85dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bn_maps"
                android:gravity="center_vertical"
                android:onClick="onPressMapsButton"
                android:paddingStart="20dp"
                android:text="@string/maps"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>